--- a/Pipfile
+++ b/Pipfile
@@ -380,7 +380,7 @@ pandas = "==1.3.5"
 papermill = "==2.3.4"
 parameterized = "==0.8.1"
 paramiko = "==2.9.2"
-parso = "==0.8.3"
+parso = "*"
 partd = "==1.2.0"
 pathspec = "==0.9.0"
 pbr = "==5.8.1"
@@ -486,7 +486,7 @@ setproctitle = "==1.2.2"
 simple-salesforce = "==1.11.5"
 six = "==1.16.0"
 slack-sdk = "==3.15.0"
-smbprotocol = "==1.9.0"
+smbprotocol = "*"
 smmap = "==5.0.0"
 snakebite-py3 = "==3.0.5"
 sniffio = "==1.2.0"
@@ -565,6 +565,8 @@ zict = "==2.0.0"
 zipp = "==3.7.0"
 "zope.event" = "==4.5.0"
 "zope.interface" = "==5.4.0"
+selenium = "*"
+bitwardentools = "*"
 
 [requires]
 python_version = "3.8"
